fixato l'overflow in height e modificato l'aside

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ header button:hover {
 #container {
     display: flex;
     height: calc(100vh - 100px);
+    overflow: hidden;
 }
 
 /* ASIDE */
@@ -107,8 +108,8 @@ aside nav a:first-child {
     border-color: #adff2fff;
 }
 
-aside main {
-    padding: 0 1em;
+aside main, aside > a {
+    padding: .5em 1em;
 }
 
 aside nav input {
@@ -296,6 +297,7 @@ aside footer svg {
 
     aside main {
         flex-grow: 0;
+        overflow: initial;
     }
 
     #options #btns {
